# racer

./: .gitignore  CMakeLists.txt  README.md  behaviour.cpp  change_me.c  getch_example.c  main.c  main.cpp  run_board.sh
application/: application.cpp  application.h
behaviour/: behaviour.h
common/: types.h
docs/: architecture.md  vision.md
exceptions/: exceptions.cpp  exceptions.h
input/: input.h
io/: input.cpp  input.h  screen.cpp  screen.h
lib/include/: mzapo_parlcd.h  mzapo_phys.h  mzapo_regs.h
output/: printing.cpp  printing.h
renderer/: renderer.cpp  renderer.h
renderer/graphics/: graphics.cpp  graphics.h
scenes/: game_over.h  main_menu.cpp  main_menu.h  scenes.cpp  scenes.h  track.cpp  track.h
scenes/main_menu/: MainMenuScene.cpp  MainMenuScene.h
src/: main.cpp
src/application/: application.cpp  application.h
src/components/: component.cpp  component.h  renderable.cpp  renderable.h
src/exceptions/: exceptions.h
src/game_data/: game_data.cpp  game_data.h
src/graphics/: graphics.cpp  graphics.h
src/graphics/renderer/: renderer.cpp  renderer.h
src/graphics/text/: text.cpp  text.h
src/graphics/text/label/: label.cpp  label.h
src/graphics/textures/: textures.cpp  textures.h
src/io/: async_input.cpp  async_input.h  input.cpp  input.h  screen.h
src/math/: math.cpp  math.h
src/output/: printing.cpp  printing.h
src/printing/: printing.h
src/renderer/: renderer.cpp  renderer.h
src/renderer/graphics/: graphics.cpp  graphics.h
src/scenes/: car_selection.cpp  car_selection.h  game_over.cpp  game_over.h  main_menu.cpp  main_menu.h  scenes.cpp  scenes.h  track.cpp  track.h
src/scenes/track/: obstacle.cpp  obstacle.h  player.cpp  player.h  track_manager.cpp  track_manager.h
src/scenes/track/obstacles/: box_obstacle.cpp  box_obstacle.h  obstacle.cpp  obstacle.h  rival.cpp  rival.h
textures/: texture_transformer.py  textures.yaml
textures/binary/: box_big  box_small  box_wide_big  box_wide_small  player_fast  player_medium  player_slow  rival_fast  rival_medium  rival_slow
textures/fonts/: binary  font_transformer.py
